recursion.lessons.recursion.koch.Koch.scala.error
Koch:29: error: expected start of definition
	override def run() {
                 ^Koch:32: error: Unmatched closing brace '}' ignored here
}
^